Tooltip: add flex-basis on tooltip content to fix the display on IE11

--- a/src/alto-ui/Tooltip/Tooltip.scss
+++ b/src/alto-ui/Tooltip/Tooltip.scss
@@ -82,4 +82,5 @@
 
 .Tooltip__content {
   flex: 1;
+  flex-basis: auto;
 }
